fix(selection/backtest): persist selected stock & add trading frictions
- Persist active strategy selection with stock via ActiveStrategyService.switchStrategyWithStock

- AutoStrategySelector now uses switchStrategyWithStock and sets expected returns for shadow candidates

- Add buy/sell fees, sell tax, and slippage to BacktestService; update tests and minor docs